--- a/template.html
+++ b/template.html
@@ -50,6 +50,168 @@
       document.addEventListener("DOMContentLoaded", () => {
         document.getElementById("btnsf11").addEventListener("click", addsf11);
       });
+      const addsf12 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 1x2",
+          width: 1,
+          length: 2,
+          quantity: document.getElementById("sf12").value,
+        };
+        allPieces.push(piece);
+        document.forms[1].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf12").addEventListener("click", addsf12);
+      });
+      const addsf13 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 1x3",
+          width: 1,
+          length: 3,
+          quantity: document.getElementById("sf13").value,
+        };
+        allPieces.push(piece);
+        document.forms[2].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf13").addEventListener("click", addsf13);
+      });
+      const addsf14 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 1x4",
+          width: 1,
+          length: 4,
+          quantity: document.getElementById("sf14").value,
+        };
+        allPieces.push(piece);
+        document.forms[3].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf14").addEventListener("click", addsf14);
+      });
+      const addsf22 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 2x2",
+          width: 2,
+          length: 2,
+          quantity: document.getElementById("sf22").value,
+        };
+        allPieces.push(piece);
+        document.forms[4].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf22").addEventListener("click", addsf22);
+      });
+      const addsf23 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 2x3",
+          width: 2,
+          length: 3,
+          quantity: document.getElementById("sf23").value,
+        };
+        allPieces.push(piece);
+        document.forms[5].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf23").addEventListener("click", addsf23);
+      });
+      const addsf24 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 2x4",
+          width: 2,
+          length: 4,
+          quantity: document.getElementById("sf24").value,
+        };
+        allPieces.push(piece);
+        document.forms[6].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf24").addEventListener("click", addsf24);
+      });
+      const addsf33 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 3x3",
+          width: 3,
+          length: 3,
+          quantity: document.getElementById("sf33").value,
+        };
+        allPieces.push(piece);
+        document.forms[7].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf33").addEventListener("click", addsf33);
+      });
+      const addsf34 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 3x4",
+          width: 3,
+          length: 4,
+          quantity: document.getElementById("sf34").value,
+        };
+        allPieces.push(piece);
+        document.forms[8].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf34").addEventListener("click", addsf34);
+      });
+      const addsf44 = (ev) => {
+        ev.preventDefault();
+        let piece = {
+          id: "Stone Floor 4x4",
+          width: 4,
+          length: 4,
+          quantity: document.getElementById("sf44").value,
+        };
+        allPieces.push(piece);
+        document.forms[9].reset();
+
+        console.log(allPieces);
+
+        localStorage.setItem("Inventory", JSON.stringify(allPieces));
+      };
+      document.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("btnsf44").addEventListener("click", addsf44);
+      });
     </script>
   </body>
 </html>
